--- a/releases.yaml
+++ b/releases.yaml
@@ -55,7 +55,7 @@ releases:
             sensor-tools-scada-client: '1.1'
             serial-tool: 1.1.0
             ss-dev: 2.0-1.43.4-2+wb1
-            wb-configs: 3.0.1~exp~feature+49818+bullseye~16~g0288cc5
+            wb-configs: 3.0.1~exp~feature+49818+bullseye~17~g3d2f6cf
             wb-daemon-watchdogs: '1.1'
             wb-demo-kit-configs: 1.5.0
             wb-diag-collect: 1.3.0
