--- a/releases.yaml
+++ b/releases.yaml
@@ -280,7 +280,7 @@ releases:
             wb-mqtt-homeui: 2.44.4
             wb-mqtt-iec104: 1.0.2
             wb-mqtt-knx: 1.9.0
-            wb-mqtt-logs: 1.3.0  # stretch-fixed, 1.4.0 build is for bullseye
+            wb-mqtt-logs: 1.3.0-wb100  # stretch-fixed, >> 1.4.0 builds are for bullseye
             wb-mqtt-mbgate: 1.1.2
             wb-mqtt-opcua: 1.0.4
             wb-mqtt-rfblinds: '1.0'
