--- a/releases.yaml
+++ b/releases.yaml
@@ -99,8 +99,8 @@ releases:
             wb-mqtt-zabbix: '0.2'
             wb-rules-system: 1.8.1
             wb-rules: 2.12.0~exp~feature+mosquitto+socket~1~gf346539
-            wb-suite: 1.11.0
-            wb-test-suite-deps: 1.10.0
+            wb-suite: 1.12.0~exp~feature+test+suite+py3~2~gdf32aad
+            python3-wb-test-suite-deps: 1.12.0~exp~feature+test+suite+py3~2~gdf32aad
             wb-test-suite-dummy: 1.10.0
             wb-update-manager: 1.2.5
             wb-utils: 3.7.0~exp~feature+50202+bullseye~1~gd3c85c3
@@ -289,8 +289,8 @@ releases:
             wb-mqtt-snmp: 1.2.0
             wb-mqtt-w1: 2.2.2
             wb-rules: 2.11.4
-            wb-suite: 1.11.0
-            wb-test-suite-deps: 1.10.0
+            wb-suite: 1.12.0~exp~feature+test+suite+py3~2~gdf32aad
+            wb-test-suite-deps: 1.12.0~exp~feature+test+suite+py3~2~gdf32aad
             z-way-server: 3.2.2-93-g8c133c1
             zbw: '1.2'
             zigbee2mqtt: 1.25.2
