--- a/releases.yaml
+++ b/releases.yaml
@@ -104,6 +104,7 @@ releases:
             wb-test-suite-dummy: 1.10.0
             wb-update-manager: 1.2.5
             wb-utils: 3.7.0~exp~feature+50202+bullseye~1~gd3c85c3
+            wb-update-notifier: 0.1.0
             wb-zigbee2mqtt: 1.1.0
             z-way-server: 3.2.2-93-g8c133c1
             zbw: '1.2'
