--- a/git-sources.yaml
+++ b/git-sources.yaml
@@ -52,6 +52,12 @@ by-package:
     linux-firmware-image-4.1.15-wb2: "http://github.com/wirenboard/linux"
     linux-firmware-image-4.9.22-wb2: "http://github.com/wirenboard/linux"
     linux-firmware-image-4.9.22-wb6: "http://github.com/wirenboard/linux"
+    linux-image-wb2: "https://github.com/wirenboard/linux"
+    linux-image-wb6: "https://github.com/wirenboard/linux"
+    linux-image-wb7: "https://github.com/wirenboard/linux"
+    linux-headers-wb2: "https://github.com/wirenboard/linux"
+    linux-headers-wb6: "https://github.com/wirenboard/linux"
+    linux-headers-wb7: "https://github.com/wirenboard/linux"
     mosquitto-dev: "https://github.com/wirenboard/contrib"
     mqtt-tools: "https://github.com/wirenboard/mqtt-tools"
     nginx: "http://github.com/wirenboard/contrib"
@@ -71,6 +77,7 @@ by-package:
     python3-mqttrpc: "https://github.com/wirenboard/mqtt-rpc"
     python3-wb-common: "https://github.com/wirenboard/wb-common"
     python3-wb-mcu-fw-updater: "https://github.com/wirenboard/wb-mcu-fw-updater"
+    python3-modbus-utils-rpc: "https://github.com/wirenboard/modbus-utils-rpc"
     sensor-tools-scada-client: "https://github.com/wirenboard/sensor-tools-scada-client"
     serial-tool: "https://github.com/wirenboard/serial_tool"
     u-boot-tools: null  # FIXME
