--- a/git-sources.yaml
+++ b/git-sources.yaml
@@ -37,6 +37,7 @@ by-package:
     wb-mqtt-knx: "https://github.com/wirenboard/wb-mqtt-knx"
     wb-mqtt-lirc: "https://github.com/wirenboard/wb-mqtt-lirc"
     wb-mqtt-mbgate: "https://github.com/wirenboard/wb-mqtt-mbgate"
+    wb-mqtt-rfblinds: "https://github.com/wirenboard/wb-mqtt-rfblinds"
     wb-mqtt-serial: "https://github.com/wirenboard/wb-mqtt-serial"
     wb-mqtt-smartbus: "https://github.com/wirenboard/wb-mqtt-smartbus"
     wb-mqtt-snmp: "https://github.com/wirenboard/wb-mqtt-snmp"
