--- a/git-sources.yaml
+++ b/git-sources.yaml
@@ -45,6 +45,7 @@ by-package:
     wb-mqtt-timestamper: "https://github.com/wirenboard/wb-mqtt-timestamper"
     wb-mqtt-zabbix: "https://github.com/wirenboard/wb-mqtt-zabbix"
     wb-mqtt-zway: "https://github.com/wirenboard/wb-mqtt-zway"
+    wb-update-notifier: "https://github.com/wirenboard/wb-update-notifier"
     wb-rules: "https://github.com/wirenboard/wb-rules"
     ca-certificates-contactless: null  # FIXME
     contactless-keyring: "https://github.com/wirenboard/keyring"
