--- a/releases.yaml
+++ b/releases.yaml
@@ -458,6 +458,8 @@ releases:
             msw3Gc: 4.26.0
             msw3G419L: 4.29.2
             msw5G: 4.29.5
+            msw5GL: 4.29.6
+            msw5Gth: 4.29.6
             # WB-MD
             mdm3: 2.5.3
             mdm3_042: 2.5.3
@@ -550,6 +552,8 @@ releases:
             msw3Gc: 4.29.2
             msw3G419L: 4.29.2
             msw5G: 4.29.5
+            msw5GL: 4.29.6
+            msw5Gth: 4.29.6
             # WB-MD
             mdm3: 2.6.5
             mdm3_042: 2.6.5
