--- a/releases.yaml
+++ b/releases.yaml
@@ -99,6 +99,7 @@ releases:
             wb-homa-ninja-bridge: 1.9.1
             wb-homa-rfsniffer: 1.0.9
             wb-homa-w1: 2.2.5
+            wb-homa-zway: 1.0.3+wb2
             wb-hwconf-manager: 1.57.1
             wb-knxd-config: 1.1.2
             wb-mb-explorer: 1.2.8
@@ -117,6 +118,7 @@ releases:
             wb-mqtt-homeui: 2.59.0-wb101
             wb-mqtt-iec104: 1.0.2
             wb-mqtt-knx: 1.12.0
+            wb-mqtt-lirc: 1.1.4
             wb-mqtt-logs: 1.4.1
             wb-mqtt-mbgate: 1.5.0
             wb-mqtt-metrics: 0.3.0
@@ -132,6 +134,7 @@ releases:
             wb-mqtt-timestamper: 1.10.1
             wb-mqtt-w1: 2.2.5
             wb-mqtt-zabbix: '0.2'
+            wb-mqtt-zway: 1.0.3+wb2
             wb-nm-helper: 1.23.1-wb101
             wb-rules: 2.18.1
             wb-rules-system: 1.9.4
