--- a/releases.yaml
+++ b/releases.yaml
@@ -39,12 +39,12 @@ releases:
             libwbmqtt: 1.7.2
             libwbmqtt-dev: 1.7.2
             libwbmqtt0: 1.7.2
-            libwbmqtt1-3: 3.10.0-wb100
-            libwbmqtt1-3-dev: 3.10.0-wb100
-            libwbmqtt1-3-test-utils: 3.10.0-wb100
-            libwbmqtt1-4: 4.0.0
-            libwbmqtt1-4-dev: 4.0.0
-            libwbmqtt1-4-test-utils: 4.0.0
+            libwbmqtt1-3: 3.10.0-wb102
+            libwbmqtt1-3-dev: 3.10.0-wb102
+            libwbmqtt1-3-test-utils: 3.10.0-wb102
+            libwbmqtt1-4: 4.0.0-wb100
+            libwbmqtt1-4-dev: 4.0.0-wb100
+            libwbmqtt1-4-test-utils: 4.0.0-wb100
             linux-libc-dev: 5.10.35-wb133
             logsave: 1.46.2-2+wb1
             modbus-utils: 1.2.7
@@ -301,9 +301,9 @@ releases:
             libcomerr2: 1.43.4-2+wb1
             libgpiod2: 1.2-3
             libss2: 1.43.4-2+wb1
-            libwbmqtt1-3: 3.9.0
-            libwbmqtt1-3-dev: 3.9.0
-            libwbmqtt1-3-test-utils: 3.9.0
+            libwbmqtt1-3: 3.9.0-wb100
+            libwbmqtt1-3-dev: 3.9.0-wb100
+            libwbmqtt1-3-test-utils: 3.9.0-wb100
             nodejs: 12.19.0-1nodesource1
             python3-modbus-utils-rpc: 1.0.1
             rapidscada: 6.0.2-1
@@ -721,6 +721,7 @@ staging:
         - "libwbmqtt1-dev"
         - "libwbmqtt1-test-utils"
         - "libwbmqtt1-2*"
+        - "libwbmqtt1-3*"
         - "wb-homa-zway"
         - "wb-mqtt-zway"
         - "wb-mqtt-lirc"
