--- a/releases.yaml
+++ b/releases.yaml
@@ -327,7 +327,7 @@ releases:
             wb-mqtt-opcua: 1.0.4
             wb-mqtt-rfblinds: '1.0'
             wb-mqtt-serial: 2.68.6-wb106
-            wb-mqtt-smartweb: 1.1.1
+            wb-mqtt-smartweb: 1.1.1-wb100
             wb-mqtt-snmp: 1.2.0
             wb-mqtt-w1: 2.2.2
             wb-rules: 2.11.4
